# transcription_AI

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  plan.md  pyproject.toml  run_worker.py
.github/workflows/: ci.yml
backend/: __init__.py
backend/app/: main.py  routes.py
backend/core/: __init__.py  utils.py
backend/core/worker/: __init__.py  queue.py  run.py  tasks.py  transcription.py  worker.py
backend/scripts/: __init__.py  run_pipeline.py
backend/tests/: __init__.py  test_main.py
backend/tests/app/: test_main.py  test_routes.py
backend/tests/core/: test_utils.py
backend/tests/core/worker/: test_queue.py  test_tasks.py  test_transcription.py  test_worker.py
backend/tests/scripts/: test_run_pipeline.py
docker/backend/: Dockerfile
