[tool.poetry]
name = "transcription-ai"
version = "0.1.0"
description = "Smart Assistant for Video/Audio Content"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
redis = "^5.0.1"
rq = "^1.15.1"
httpx = "^0.25.0"
python-multipart = "^0.0.6"
openai = "^1.1.1"
langchain = "^0.0.335"
sentence-transformers = "^2.2.2"
websockets = "^12.0"
ruptures = "^1.1.8"
ffmpeg-python = "^0.2.0"
vosk = "^0.3.45"
# Commented out Whisper dependencies as we're replacing with Vosk
# openai-whisper = {git = "https://github.com/openai/whisper.git"}
# whisper = "^1.1.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"
mypy = "^1.6.1"

[tool.poetry.scripts]
api = "backend.app.main:run_api"
worker = "backend.core.worker.run:start_worker"
run-all = "backend.scripts.run_pipeline:start_pipeline"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.9.19"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
warn_no_return = true
